# sparql_query_generation

./: Makefile  README.md  basic_answering.ipynb  pyproject.toml
notebooks/: basic_answering.ipynb  embed_properties.ipynb  entity_properties.jsonl  failures.json  test_simple_questions.ipynb
src/sparql_query_generation/: server.py  simple_question_answer.py
